# actix-yew-app-template

./: .gitignore  Cargo.toml  README.md  bootstrap.sh  package.json
backend/main/: Cargo.toml
backend/main/src/: main.rs
frontend/: tailwind.config.js
frontend/main/: Cargo.toml  Trunk.toml  index.html
frontend/main/src/: main.rs
