[package]
name = "backend-main"
version = "0.1.0"
authors = ["Paosder <denjaraos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.11.1", features = ["macros"]}
actix-web = "4.0.0-beta.6"
actix-web-actors = { git = "https://github.com/actix/actix-web.git", tag = "web-v4.0.0-beta.6" }
actix-test = { git = "https://github.com/actix/actix-web.git", tag = "web-v4.0.0-beta.6" }
actix-files = { git = "https://github.com/actix/actix-web.git", tag = "web-v4.0.0-beta.6" }
env_logger = "0.8.3"
serde_json = "1.0.64"
serde = "1.0.126"